# mr_dual_arm_control

./: CMakeLists.txt  MR_dualarm_info.json  README.md  package.xml
include/IndyDualArm/: IndyDualArm.cpp  IndyDualArm.h
include/ModernRobotics/: ModernRobotics.cpp  ModernRobotics.h  RelativeModernRobotics.cpp  RelativeModernRobotics.h
launch/: indy7.launch.py
mr_dual_arm_control/: setup.py
src/: mr_dual_arm_control.cpp  mr_dual_arm_control_temp.cpp
urdf/: dual_arm.urdf.xml  indy7.rviz
